<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/infoPageBackgroundColor"
    android:orientation="vertical"
    android:paddingTop="8dp"
    tools:context=".base.StickerPackInfoActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:orientation="vertical">
        <TextView
            android:id="@+id/tray_icon"
            style="@style/InfoButtonStyle"
            android:textColor="#B9B9B9"
            tools:drawableLeft="@drawable/ic_desktop"
            tools:drawableStart="@drawable/ic_desktop"
            android:clickable="false"
            android:text="@string/info_screen_tray_icon" />

        <TextView
            android:id="@+id/view_webpage"
            style="@style/InfoButtonStyle"
            android:drawableLeft="@drawable/ic_desktop"
            android:drawableStart="@drawable/ic_desktop"
            android:text="@string/view_webpage" />

        <TextView
            android:id="@+id/send_email"
            style="@style/InfoButtonStyle"
            android:drawableLeft="@drawable/ic_email"
            android:drawableStart="@drawable/ic_email"
            android:text="@string/send_email" />

        <TextView
            android:id="@+id/privacy_policy"
            style="@style/InfoButtonStyle"
            android:drawableLeft="@drawable/ic_privacy"
            android:drawableStart="@drawable/ic_privacy"
            android:text="@string/privacy_policy" />
    </LinearLayout>
</LinearLayout>
