<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        app:srcCompat="@mipmap/ic_launcher"
        tools:visibility="visible" />


    <ProgressBar
        android:id="@+id/progress_bar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/logo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp" />

    <RelativeLayout
        android:id="@+id/update_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#37474F"
        tools:visibility="visible">

        <ImageView
            android:id="@+id/logo_inlline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="100dp"
            app:srcCompat="@mipmap/ic_launcher"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/update_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/logo_inlline"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginBottom="25dp"
            android:text="@string/update_for_a_faster_better_stickers_app"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/update_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/update_title"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginBottom="25dp"
            android:text="@string/an_update_is_available_with_new_features_a_faster_experince_fixes_and_more_it_typically_takes_less_than_1_minute"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="14sp" />

        <Button
            android:id="@+id/btn_update"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/update_desc"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="25dp"
            android:background="#039BE5"
            android:text="@string/update_btn"
            android:textColor="@color/white"
            android:textSize="14sp" />

        <Button
            android:id="@+id/btn_not_now"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/btn_update"
            android:layout_centerHorizontal="true"
            android:background="#263238"
            android:text="@string/not_now"
            android:textColor="@color/white"
            android:textSize="14sp" />
    </RelativeLayout>

</RelativeLayout>